module.jai


    MG_EV_ERROR      :: ERROR;
    MG_EV_OPEN       :: OPEN;
    MG_EV_POLL       :: POLL;
    MG_EV_RESOLVE    :: RESOLVE;
    MG_EV_CONNECT    :: CONNECT;
    MG_EV_ACCEPT     :: ACCEPT;
    MG_EV_READ       :: READ;
    MG_EV_WRITE      :: WRITE;
    MG_EV_CLOSE      :: CLOSE;
    MG_EV_HTTP_MSG   :: HTTP_MSG;
    MG_EV_HTTP_CHUNK :: HTTP_CHUNK;
    MG_EV_WS_OPEN    :: WS_OPEN;
    MG_EV_WS_MSG     :: WS_MSG;
    MG_EV_WS_CTL     :: WS_CTL;
    MG_EV_MQTT_CMD   :: MQTT_CMD;
    MG_EV_MQTT_MSG   :: MQTT_MSG;
    MG_EV_MQTT_OPEN  :: MQTT_OPEN;
    MG_EV_SNTP_TIME  :: SNTP_TIME;
    MG_EV_USER       :: USER;
}

mg_dns :: struct {
    url: *u8; // DNS server URL
    c:   *mg_connection; // DNS server connection
}

mg_addr :: struct {
    port:   u16; // TCP or UDP port in network byte order
    ip:     u32; // IP address in network byte order
    ip6:    [16] u8; // IPv6 address
    is_ip6: bool; // True when address is IPv6 address
}

mg_mgr :: struct {
    conns:      *mg_connection; // List of active connections
    dns4:       mg_dns; // DNS for IPv4
    dns6:       mg_dns; // DNS for IPv6
    dnstimeout: s32; // DNS resolve timeout in milliseconds
    nextid:     u32; // Next connection ID
    userdata:   *void; // Arbitrary user data pointer
}

mg_connection :: struct {
    next:          *mg_connection; // Linkage in struct mg_mgr :: connections
    mgr:           *mg_mgr; // Our container
    loc:           mg_addr; // Local address
    rem:           mg_addr; // Remote address
    fd:            *void; // Connected socket, or LWIP data
    id:            u32; // Auto-incrementing unique connection ID
    recv:          mg_iobuf; // Incoming data
    send:          mg_iobuf; // Outgoing data
    fn:            mg_event_handler_t; // User-specified event handler function
    fn_data:       *void; // User-specified function parameter
    pfn:           mg_event_handler_t; // Protocol-specific handler function
    pfn_data:      *void; // Protocol-specific function parameter
    label:         [50] u8; // Arbitrary label
    tls:           *void; // TLS specific data
    is_listening:  u32; // Listening connection
    #place is_listening; /*bitfield 1*/ is_client:     u32; // Outbound (client) connection
    #place is_listening; /*bitfield 2*/ is_accepted:   u32; // Accepted (server) connection
    #place is_listening; /*bitfield 3*/ is_resolving:  u32; // Non-blocking DNS resolution is in progress
    #place is_listening; /*bitfield 4*/ is_connecting: u32; // Non-blocking connect is in progress
    #place is_listening; /*bitfield 5*/ is_tls:        u32; // TLS-enabled connection
    #place is_listening; /*bitfield 6*/ is_tls_hs:     u32; // TLS handshake is in progress
    #place is_listening; /*bitfield 7*/ is_udp:        u32; // UDP connection
    #place is_listening; /*bitfield 8*/ is_websocket:  u32; // WebSocket connection
    #place is_listening; /*bitfield 9*/ is_hexdumping: u32; // Hexdump in/out traffic
    #place is_listening; /*bitfield 10*/ is_draining:   u32; // Send remaining data, then close and free
    #place is_listening; /*bitfield 11*/ is_closing:    u32; // Close and free the connection immediately
    #place is_listening; /*bitfield 12*/ is_readable:   u32; // Connection is ready to read
    #place is_listening; /*bitfield 13*/ is_writable:   u32; // Connection is ready to write
}

mg_mgr_poll :: (unknown0: *mg_mgr, ms: s32) -> void #foreign mongoose;

mg_mgr_init :: (unknown0: *mg_mgr) -> void #foreign mongoose;

mg_mgr_free :: (unknown0: *mg_mgr) -> void #foreign mongoose;

mg_listen :: (unknown0: *mg_mgr, url: *u8, fn: mg_event_handler_t, fn_data: *void) -> *mg_connection #foreign mongoose;

mg_connect :: (unknown0: *mg_mgr, url: *u8, fn: mg_event_handler_t, fn_data: *void) -> *mg_connection #foreign mongoose;

mg_connect_resolved :: (unknown0: *mg_connection) -> void #foreign mongoose;

mg_send :: (unknown0: *mg_connection, unknown1: *void, unknown2: size_t) -> bool #foreign mongoose;

mg_printf_CFormat :: (unknown0: *mg_connection, fmt: *u8, __args: ..Any) -> size_t #foreign mongoose "mg_printf";
mg_printf :: (unknown0: *mg_connection, fmt: string, __args: ..Any) -> size_t {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    return mg_printf_CFormat(unknown0, "%s", formatted_text.data);
} @PrintLike

mg_straddr :: (unknown0: *mg_addr, unknown1: *u8, unknown2: size_t) -> *u8 #foreign mongoose;

mg_aton :: (str: mg_str, addr: *mg_addr) -> bool #foreign mongoose;

mg_ntoa :: (addr: *mg_addr, buf: *u8, len: size_t) -> *u8 #foreign mongoose;

mg_mkpipe :: (unknown0: *mg_mgr, unknown1: mg_event_handler_t, unknown2: *void) -> *mg_connection #foreign mongoose;

mg_mgr_wakeup :: (pipe: *mg_connection, buf: *void, len: size_t) -> void #foreign mongoose;

// These functions are used to integrate with custom network stacks
mg_alloc_conn :: (unknown0: *mg_mgr) -> *mg_connection #foreign mongoose;

mg_close_conn :: (c: *mg_connection) -> void #foreign mongoose;

mg_open_listener :: (c: *mg_connection, url: *u8) -> bool #foreign mongoose;

mg_http_header :: struct {
    name:  mg_str; // Header name
    value: mg_str; // Header value
}

mg_http_message :: struct {
    method:  mg_str; // Request/response line
    uri:     mg_str; // Request/response line
    query:   mg_str; // Request/response line
    proto:   mg_str; // Request/response line
    headers: [40] mg_http_header; // Headers
    body:    mg_str; // Body
    head:    mg_str; // Request + headers
    chunk:   mg_str; // Chunk for chunked encoding,  or partial body
    message: mg_str; // Request + headers + body
}

// Parameter for mg_http_serve_dir()
mg_http_serve_opts :: struct {
    root_dir:      *u8; // Web root directory, must be non-NULL
    ssi_pattern:   *u8; // SSI file name pattern, e.g. #.shtml
    extra_headers: *u8; // Extra HTTP headers to add in responses
    mime_types:    *u8; // Extra mime types, ext1=type1,ext2=type2,..
    fs:            *mg_fs; // Filesystem implementation. Use NULL for POSIX
}

// Parameter for mg_http_next_multipart
mg_http_part :: struct {
    name:     mg_str; // Form field name
    filename: mg_str; // Filename for file uploads
    body:     mg_str; // Part contents
}

mg_http_parse :: (s: *u8, len: size_t, unknown0: *mg_http_message) -> s32 #foreign mongoose;

mg_http_get_request_len :: (buf: *u8, buf_len: size_t) -> s32 #foreign mongoose;

mg_http_printf_chunk_CFormat :: (cnn: *mg_connection, fmt: *u8, __args: ..Any) -> void #foreign mongoose "mg_http_printf_chunk";
mg_http_printf_chunk :: (cnn: *mg_connection, fmt: string, __args: ..Any) {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    mg_http_printf_chunk_CFormat(cnn, "%s", formatted_text.data);
} @PrintLike

mg_http_write_chunk :: (c: *mg_connection, buf: *u8, len: size_t) -> void #foreign mongoose;

mg_http_delete_chunk :: (c: *mg_connection, hm: *mg_http_message) -> void #foreign mongoose;

mg_http_listen :: (unknown0: *mg_mgr, url: *u8, fn: mg_event_handler_t, fn_data: *void) -> *mg_connection #foreign mongoose;

mg_http_connect :: (unknown0: *mg_mgr, url: *u8, fn: mg_event_handler_t, fn_data: *void) -> *mg_connection #foreign mongoose;

mg_http_serve_dir :: (unknown0: *mg_connection, hm: *mg_http_message, opts: *mg_http_serve_opts) -> void #foreign mongoose;

mg_http_serve_file :: (unknown0: *mg_connection, hm: *mg_http_message, path: *u8, opts: *mg_http_serve_opts) -> void #foreign mongoose;

// clang-format on
mg_http_reply_CFormat :: (unknown0: *mg_connection, status_code: s32, headers: *u8, body_fmt: *u8, __args: ..Any) -> void #foreign mongoose "mg_http_reply";
mg_http_reply :: (unknown0: *mg_connection, status_code: s32, headers: *u8, body_fmt: string, __args: ..Any) {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, body_fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    mg_http_reply_CFormat(unknown0, status_code, headers, "%s", formatted_text.data);
} @PrintLike

mg_http_get_header :: (unknown0: *mg_http_message, name: *u8) -> *mg_str #foreign mongoose;

mg_http_get_var :: (unknown0: *mg_str, name: *u8, unknown1: *u8, unknown2: size_t) -> s32 #foreign mongoose;

mg_url_decode :: (s: *u8, n: size_t, to: *u8, to_len: size_t, form: s32) -> s32 #foreign mongoose;

mg_url_encode :: (s: *u8, n: size_t, buf: *u8, len: size_t) -> size_t #foreign mongoose;

mg_http_creds :: (unknown0: *mg_http_message, unknown1: *u8, unknown2: size_t, unknown3: *u8, unknown4: size_t) -> void #foreign mongoose;

mg_http_match_uri :: (unknown0: *mg_http_message, glob: *u8) -> bool #foreign mongoose;

mg_http_upload :: (unknown0: *mg_connection, hm: *mg_http_message, fs: *mg_fs, dir: *u8) -> s32 #foreign mongoose;

mg_http_bauth :: (unknown0: *mg_connection, user: *u8, pass: *u8) -> void #foreign mongoose;

mg_http_get_header_var :: (s: mg_str, v: mg_str) -> mg_str #foreign mongoose;

// Multipart POST example:
// --xyz
// Content-Disposition: form-data; name="val"
//
// abcdef
// --xyz
// Content-Disposition: form-data; name="foo"; filename="a.txt"
// Content-Type: text/plain
//
// hello world
//
// --xyz--
mg_http_next_multipart :: (unknown0: mg_str, unknown1: size_t, unknown2: *mg_http_part) -> size_t #foreign mongoose;

mg_http_status :: (hm: *mg_http_message) -> s32 #foreign mongoose;

mg_http_serve_ssi :: (c: *mg_connection, root: *u8, fullpath: *u8) -> void #foreign mongoose;

mg_tls_opts :: struct {
    ca:      *u8; // CA certificate file. For both listeners and clients
    crl:     *u8; // Certificate Revocation List. For clients
    cert:    *u8; // Certificate
    certkey: *u8; // Certificate key
    ciphers: *u8; // Cipher list
    srvname: mg_str; // If not empty, enables server name verification
    fs:      *mg_fs; // FS API for reading certificate files
}

mg_tls_init :: (unknown0: *mg_connection, unknown1: *mg_tls_opts) -> void #foreign mongoose;

mg_tls_free :: (unknown0: *mg_connection) -> void #foreign mongoose;

mg_tls_send :: (unknown0: *mg_connection, buf: *void, len: size_t) -> s32 #foreign mongoose;

mg_tls_recv :: (unknown0: *mg_connection, buf: *void, len: size_t) -> s32 #foreign mongoose;

mg_tls_handshake :: (unknown0: *mg_connection) -> void #foreign mongoose;

mg_ws_message :: struct {
    data:  mg_str; // Websocket message data
    flags: u8; // Websocket message flags
}

mg_ws_connect_CFormat :: (unknown0: *mg_mgr, url: *u8, fn: mg_event_handler_t, fn_data: *void, fmt: *u8, __args: ..Any) -> *mg_connection #foreign mongoose "mg_ws_connect";
mg_ws_connect :: (unknown0: *mg_mgr, url: *u8, fn: mg_event_handler_t, fn_data: *void, fmt: string, __args: ..Any) -> *mg_connection {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    return mg_ws_connect_CFormat(unknown0, url, fn, fn_data, "%s", formatted_text.data);
} @PrintLike
